--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </a-assets>
     <a-marker preset="hiro">
         <a-obj-model id="walker" src="#walker-obj" mtl="#walker-mtl" position="0 0 0" scale="0.01 0.01 0.01" rotation="0 0 0"></a-obj-model>
-        
+        <a-text value="I'm walker!!!" position="0 1.3 0" align="center"></a-text>
     </a-marker>
     <a-entity camera></a-entity>
 </a-scene>
