--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;" vr-mode-ui="enabled: false">
     <a-assets>
-        <a-asset-item id="SB-obj" src="model_obj/SB/SB.obj"></a-asset-item>
-        <a-asset-item id="SB-mtl" src="model_obj/SB/SB.mtl"></a-asset-item>
+        <a-asset-item id="SB-obj" src="model_obj2/SB/SB.obj"></a-asset-item>
+        <a-asset-item id="SB-mtl" src="model_obj2/SB/SB.mtl"></a-asset-item>
     </a-assets>
     <a-marker preset="hiro">
         <a-obj-model id="SB" src="#SB-obj" mtl="#SB-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
