--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </a-assets>
     <a-marker preset="hiro">
         <a-obj-model id="SB" src="#SB-obj" mtl="#SB-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
-        <a-text value="I'm walker!!!" position="0 1.3 0" align="center"></a-text>
+        <a-text value="New planet" position="0 1.3 0" align="center"></a-text>
     </a-marker>
     <a-entity camera></a-entity>
 </a-scene>
