--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;" vr-mode-ui="enabled: false">
     <a-assets>
-        <a-asset-item id="SB-obj" src="obj/obj.obj"></a-asset-item>
-        <a-asset-item id="SB-mtl" src="obj/obj.mtl"></a-asset-item>
+        <a-asset-item id="SB-obj" src="obj/Dolphin.obj"></a-asset-item>
+        <a-asset-item id="SB-mtl" src="obj/Dolphin.mtl"></a-asset-item>
     </a-assets>
     <a-marker preset="hiro">
-        <a-obj-model id="SB" src="#SB-obj" mtl="#SB-mtl" position="0 0.8 0" scale="0.5 0.5 0.5" rotation="0 180 0"></a-obj-model>
-        <a-text value="New planet" position="0 2 0" align="center"></a-text>
+        <a-obj-model id="SB" src="#SB-obj" mtl="#SB-mtl" position="0 -1 0" scale="0.1 0.1 0.1" rotation="0 60 0"></a-obj-model>
+        <a-text value="Thank you for coming" position="0 2 0" align="center"></a-text>
     </a-marker>
     <a-entity camera></a-entity>
 </a-scene>
