--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a-asset-item id="SB-obj" src="obj/Dolphin.obj"></a-asset-item>
         <a-asset-item id="SB-mtl" src="obj/Dolphin.mtl"></a-asset-item>
     </a-assets>
-    <a-marker type='pattern' url='./marker/pattern-logo.patt'>
+    <a-marker type='pattern' url='pattern-logo.patt'>
         <a-obj-model id="SB" src="#SB-obj" mtl="#SB-mtl" position="0 0 0" scale="0.1 0.1 0.1" rotation="0 80 0"></a-obj-model>
         <a-text value="Thank you for coming" position="0 1 0" align="center"></a-text>
     </a-marker>
