--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!doctype HTML>
 <html>
 <!-- A-Frame ライブラリの読み込み -->
-<script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- AR.js ライブラリの読み込み -->
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;" vr-mode-ui="enabled: false">
     <a-assets>
         <a-asset-item id="SB-obj" src="obj/Dolphin.obj"></a-asset-item>
         <a-asset-item id="SB-mtl" src="obj/Dolphin.mtl"></a-asset-item>
     </a-assets>
-    <a-marker type='pattern' url='pattern-logo.patt'>
+    <!-- "preset"属性追加 -->
+    <a-marker preset="custom" type="pattern" url='pattern-logo.patt'>
         <a-obj-model id="SB" src="#SB-obj" mtl="#SB-mtl" position="0 0 0" scale="0.1 0.1 0.1" rotation="0 80 0"></a-obj-model>
         <a-text value="Thank you for coming" position="0 1 0" align="center"></a-text>
     </a-marker>
