--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- "preset"属性追加 -->
     <a-marker preset="custom" type="pattern" url='pattern-logo.patt'>
         <a-obj-model id="SB" src="#SB-obj" mtl="#SB-mtl" position="0 0 0.2" scale="0.1 0.1 0.1" rotation="0 80 0"></a-obj-model>
-        <a-text value="Thank you for coming" position="0 1 0.2" align="center"></a-text>
+        <a-text value="Thank you for coming!!!" position="0 1 0.2" align="center"></a-text>
     </a-marker>
     <a-entity camera></a-entity>
 </a-scene>
